--- a/Interfaces/ru.lproj/Localizable.strings
+++ b/Interfaces/ru.lproj/Localizable.strings
@@ -106,10 +106,10 @@
 "any" = "любое";
 "all" = "все";
 "Open Scripts Folder" = "Открыть папку скриптов";
-"Cannot create database folder" = "Извините, но Vienna не смогла создать папку базы данных";
+"Cannot create database folder title" = "Извините, но Vienna не смогла создать папку базы данных";
 "Cannot create database folder text" = "Vienna попыталась создать папку  \"%@\", но произошла ошибка. Проверьте разрешения для папок в указанном пути.";
 "Unrecognised database format title" = "Формат базы данных изменился";
-"Unrecognised database format text" = "Формат базы данных (%@) не поддерживается текущей версией Vienna. Удалите или переименуйте этот файл и перезапустите программу.\n";
+"Unrecognised database format text" = "Формат базы данных (%@) не поддерживается текущей версией Vienna. Удалите или переименуйте этот файл и перезапустите программу.";
 "Upgrade Title" = "Обновление базы";
 "Upgrade Text" = "Существующая база данных должна быть обновлена для работы с данной версией Vienna. Или же вы можете создать новую, пустую базу данных. В любом случае ваша текущая база данных будет заархивирована в %@. Новые или обновленные базы НЕ БУДУТ работать с предыдущими версиями Vienna.\n\nЗаметка: для этого билда рекомендуется создать новую базу.\n";
 "New Database" = "Новая база данных";
@@ -187,10 +187,10 @@
 "General" = "Общие";
 "Appearance" = "Внешний вид";
 "Locate Title" = "Невозможно создать базу данных Vienna";
-"Locate Text" = "Новая база данных Vienna не может быть создана в \"%@\" из-за того, что папка, возможно, находится на удаленном сервере, а текущая версия Vienna не может работать с удаленными базами данных. Пожалуйста, выберите папку на своем компьютере.\n";
+"Locate Text" = "Новая база данных Vienna не может быть создана в \"%@\" из-за того, что папка, возможно, находится на удаленном сервере, а текущая версия Vienna не может работать с удаленными базами данных. Пожалуйста, выберите папку на своем компьютере.";
 "Empty Trash message" = "Удалить все сообщения в Корзине?";
 "Empty Trash message text" = "Данное действие невозможно отменить";
-"Cannot open database" = "Извините, но Vienna не смогла открыть базу данных";
+"Cannot open database title" = "Извините, но Vienna не смогла открыть базу данных";
 "Cannot open database text" = "Файл базы данных (%@) не может быть открыт. Он может быть поврежден или недоступен. Пожалуйста, удалите или переименуйте файл базы данных и перезапустите Vienna.";
 "Vienna cannot open the file title" = "Vienna не может открыть этот файл.";
 "Vienna cannot open the file body" = "Vienna не может открыть файл \"%@\" потому что он был перемещен после загрузки.";
@@ -442,7 +442,7 @@
 
 /* Added in 3.0.2 */
 "Close" = "Закрыть";
-"Locate" = "Найти";
+"Locate…" = "Найти…";
 "Error retrieving RSS feed:"="Ошибка запроса RSS-ленты:";
 "Got HTTP status 304 - No news from last check" = "Получен HTTP-код 304 - Нет новостей с момента последней проверки";
 "Error retrieving RSS Icon:" = "Ошибка получения иконки RSS:";
